- #0003340 reported by vonitsanet regarding compile warnings for 
  lib/tre-parse.c. Upgraded tre to latest release (0.7.5)
- Updated c-ares to latest release (1.4.0)
- #0001317 reported by thilo regarding removal of (username) being 
  appended to topics set by U:Lined servers. 
- Added missing semicolons to some help.conf entries
- #0001518 reported by Cnils regarding new WHO functionality: -c with 
  no args now shows all users not in a channel if you are an IRCOp,
  and +c shows all users in at least 1 channel.
- #0002451 reported by GSF19 regarding *** Q: %s tried to kick you, when 
  it should be *** q: %s. (Actually that's ugly too but at least it
  matches the umode for now)
- #0002695 reported by w00t regarding unused check_registered and 
  check_registered_user calls in s_misc.c
- Removed anything involving portnum global variable. Not proper in 
  newconf world
- #0002920 reported by aquanight, regarding command line mkpasswd, 
  patched by BuHHunyx. Syntax: wircd.exe -P|-p authmethod password.
  If it is -p, it will get shown in a MessageBox, -P it will get copied
  to clipboard.
- Broke compile with portnum fix, fixed
- #0003027 reported by Trocotronic, regarding doing -l <para> on SJOIN, 
  and not -l as supposed. This may have caused desyncs
- #0002172 reported by Stealth, patched by WolfSage, fixing if you have an
  admin block, and forget a semicolon on a line, Unreal will proceed to use
  the block with no error, but the information will be incorrect/incomplete.
- #0003177 patched by aegis, changing non-modular add_Command to
  CommandAdd's through a huge patch. This may break some things, so heads
  up. From now on add_Command is unsafe land for modules and may be removed
  without warning.
- #0002475 reported by aquanight on detecting \'s in module filenames on
  win32 and not do ./module for it
- #0001740 reported by Trocotronic, making the IRCd send ERROR : to all
  links with possible reason for RESTART; like /die does it.