@@ -1781,3 +1781,9 @@ MOTDs
   win32 and not do ./module for it
 - #0001740 reported by Trocotronic, making the IRCd send ERROR : to all
   links with possible reason for RESTART; like /die does it.
+- #0003363 patched by adrianp, changing IRC_UID and IRC_GID into 
+  defines IRC_USER, IRC_GROUP which is a string specifiying what user name/
+  group name that should be changed into, instead of a hardcoded gid/uid.
+  This should make it easier for packaged binary releases to work (even
+  though this probably means Debian will take us in, ick .. Can't we pull
+  a new fight with debian-legal again?)
